hotfix: fix break in wedge pseudoelements when page width is wider than content width

--- a/css/style.css
+++ b/css/style.css
@@ -41,9 +41,10 @@
 	/* Layout - Wedges */
 	--wedge-angle: 2deg;
 	/* Set wedge height to prevent gaps */
-	--wedge-height: calc(var(--width-content) * tan(var(--wedge-angle))); /* Computed with width * sin(angle) / sin(90 - angle) */
+	--wedge-height: calc(100dvw * tan(var(--wedge-angle))); /* Computed with width * sin(angle) / sin(90 - angle) */
+	--wedge-height-margin: calc(var(--width-content) * tan(var(--wedge-angle))); /* Computed with width * sin(angle) / sin(90 - angle) */
 	/* Prevent wedge margin from getting too extreme with computed vw */
-	--wedge-margin: clamp(2rem, var(--wedge-height), 3.2rem);
+	--wedge-margin: clamp(2rem, var(--wedge-height-margin), 3.2rem);
 	--wedge-text-size: 1.375rem;
 
 	/* Navigation */
